Added config edit component to settings

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -2,4 +2,5 @@
   <app-ui-password></app-ui-password>
   <app-set-main-address></app-set-main-address>
   <app-generic-rpc-form></app-generic-rpc-form>
+  <app-config-edit></app-config-edit>
 </div>
