STarted adding logic for filters

--- a/src/app/community-fund/proposal-list/proposal-list.component.html
+++ b/src/app/community-fund/proposal-list/proposal-list.component.html
@@ -18,7 +18,9 @@
       class="proposal-container"
     >
       <div
-        *ngFor="let proposal of communityFundService.proposalList"
+        *ngFor="
+          let proposal of communityFundService.getFilteredProposalList(filterBy)
+        "
         class="proposal-info"
       >
         <div>
