--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -1,8 +1,6 @@
 .overview-grid {
   display: grid;
-  grid-auto-flow: dense;
-  grid-template-columns: repeat(auto-fill, 350px);
-  grid-auto-rows: 120px;
+  grid-template-columns: repeat(6, 175px);
   grid-gap: 20px;
   justify-content: center;
   max-width: 90vw;
@@ -11,31 +9,45 @@
 }
 
 .overview-card-container {
-  grid-column: span 1;
-  grid-row: span 3;
-}
-.span-two-rows {
-  grid-row: span 2;
-}
-.span-four-rows {
-  grid-row: span 4;
-}
-.span-five-rows {
-  grid-row: span 5;
-}
-.span-six-rows {
-  grid-row: span 6;
-}
-
-.span-two-columns {
   grid-column: span 2;
 }
-@media (max-width: 750px) {
-  .span-two-columns {
-    grid-column: span 1;
+
+.wide-cards {
+  grid-column: span 3;
+}
+
+@media (max-width: 1240px) {
+  .overview-grid {
+    grid-template-columns: repeat(4, minmax(175px, 1fr));
+  }
+  .wide-cards {
+    grid-column: span 4;
   }
 }
 
+@media (max-width: 840px) {
+  .overview-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+  .overview-card-container {
+    grid-column: span 1;
+  }
+  .wide-cards {
+    grid-column: span 2;
+  }
+}
+
+@media (max-width: 680px) {
+  .overview-grid {
+    grid-template-columns: 1fr;
+  }
+  .overview-card-container {
+    grid-column: span 1;
+  }
+  .wide-cards {
+    grid-column: span 1;
+  }
+}
 .overview-card {
   height: 100%;
 }
