Split walletoverview into balance overview and staking overview. changed both so they use tables

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,7 +1,7 @@
 <div class="overview-grid">
   <app-status-view class="overview-card-container"></app-status-view>
-  <app-wallet-overview class="overview-card-container"></app-wallet-overview>
-  <app-wallet-overview class="overview-card-container"></app-wallet-overview>
+  <app-balance-overview class="overview-card-container"></app-balance-overview>
+  <app-staking-overview class="overview-card-container"></app-staking-overview>
   <app-transactions-view
     class="overview-card-container"
   ></app-transactions-view>
