changed status view to wallet-status. now uses table to display data. added notifications

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,5 +1,5 @@
 <div class="overview-grid">
-  <app-status-view class="overview-card-container"></app-status-view>
+  <app-wallet-status class="overview-card-container"></app-wallet-status>
   <app-balance-overview class="overview-card-container"></app-balance-overview>
   <app-staking-overview class="overview-card-container"></app-staking-overview>
   <app-transactions-view
