--- a/src/app/community-fund/proposal-list/proposal-list.component.html
+++ b/src/app/community-fund/proposal-list/proposal-list.component.html
@@ -100,7 +100,7 @@
                 proposal.hash
               "
               class="button"
-              >View Proposal on NavExplorer.com</a
+              >View Proposal</a
             >
           </div>
         </div>
