--- a/src/app/homepage/homepage-payment-request-list/homepage-payment-request-list.html
+++ b/src/app/homepage/homepage-payment-request-list/homepage-payment-request-list.html
@@ -81,13 +81,15 @@
               paymentRequest.hash
             "
             class="button"
-            >View Proposal on NavExplorer.com</a
+            >View Proposal</a
           >
         </div>
       </div>
     </div>
     <div class="see-all-container">
-      <a href="/community-fund" class="button">See all Payment Requests</a>
+      <a routerLink="/community-fund" class="button"
+        >See all Payment Requests</a
+      >
     </div>
   </mz-card-content>
 </mz-card>
