--- a/src/app/community-fund/payment-request-list/payment-request-list.component.html
+++ b/src/app/community-fund/payment-request-list/payment-request-list.component.html
@@ -105,7 +105,7 @@
                 paymentRequest.hash
               "
               class="button"
-              >View Payment Request on NavExplorer.com</a
+              >View Payment Request</a
             >
           </div>
         </div>
