--- a/src/app/homepage/homepage-proposal-list/homepage-proposal-list.component.html
+++ b/src/app/homepage/homepage-proposal-list/homepage-proposal-list.component.html
@@ -76,13 +76,13 @@
               proposal.hash
             "
             class="button"
-            >View Proposal on NavExplorer.com</a
+            >View Proposal</a
           >
         </div>
       </div>
     </div>
     <div class="see-all-container">
-      <a href="/community-fund" class="button">See all Proposals</a>
+      <a routerLink="/community-fund" class="button">See all Proposals</a>
     </div>
   </mz-card-content>
 </mz-card>
