Added components to wallet page. split grid css into common css file, imported into wallet, homepage, settings  pages

--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,6 +1,6 @@
 <div class="overview-grid">
-  <app-ui-password></app-ui-password>
-  <app-set-main-address></app-set-main-address>
-  <app-generic-rpc-form></app-generic-rpc-form>
-  <app-config-edit></app-config-edit>
+  <app-ui-password class="overview-card-container"></app-ui-password>
+  <app-set-main-address class="overview-card-container"></app-set-main-address>
+  <app-generic-rpc-form class="overview-card-container"></app-generic-rpc-form>
+  <app-config-edit class="overview-card-container"></app-config-edit>
 </div>
