--- a/src/app/wallet/wallet-page.component.html
+++ b/src/app/wallet/wallet-page.component.html
@@ -1,1 +1,11 @@
-<app-detailed-transactions-card></app-detailed-transactions-card>
+<div class="overview-grid">
+  <app-wallet-status class="overview-card-container"></app-wallet-status>
+  <app-balance-overview class="overview-card-container"></app-balance-overview>
+  <app-staking-overview class="overview-card-container"></app-staking-overview>
+  <app-deposit-view class="overview-card-container"></app-deposit-view>
+  <app-send-to-view class="overview-card-container"></app-send-to-view>
+  <app-generic-rpc-form class="overview-card-container"></app-generic-rpc-form>
+  <app-detailed-transactions-card
+    class="overview-card-container wide-card-container"
+  ></app-detailed-transactions-card>
+</div>
