--- a/src/app/community-fund/community-fund.component.css
+++ b/src/app/community-fund/community-fund.component.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
   margin: 0 5vw;
 }
 main.container-grid {
@@ -14,4 +14,4 @@ main .small-item {
 
 main .large-item {
   grid-column: span 3;
-}
+} */
