--- a/src/app/community-fund/community-fund.component.html
+++ b/src/app/community-fund/community-fund.component.html
@@ -1,7 +1,9 @@
-<main class="container-grid">
-  <app-cfund-stats class="small-item"></app-cfund-stats>
-  <app-proposal-creator class="small-item"></app-proposal-creator>
-  <app-payment-request-creator class="small-item"></app-payment-request-creator>
-  <app-proposal-list class="large-item"></app-proposal-list>
-  <app-payment-request-list class="large-item"></app-payment-request-list>
+<main class="overview-grid">
+  <app-cfund-stats class="overview-card-container"></app-cfund-stats>
+  <app-proposal-creator class="overview-card-container"></app-proposal-creator>
+  <app-payment-request-creator
+    class="overview-card-container"
+  ></app-payment-request-creator>
+  <app-proposal-list class="wide-cards"></app-proposal-list>
+  <app-payment-request-list class="wide-cards"></app-payment-request-list>
 </main>
