--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -3,4 +3,6 @@
   <app-set-main-address class="overview-card-container"></app-set-main-address>
   <app-generic-rpc-form class="overview-card-container"></app-generic-rpc-form>
   <app-config-edit class="overview-card-container"></app-config-edit>
+  <app-device-utils class="overview-card-container"></app-device-utils>
+  <app-wallet-utils class="overview-card-container"></app-wallet-utils>
 </div>
