--- a/src/app/generic-rpc-form/generic-rpc-form.component.html
+++ b/src/app/generic-rpc-form/generic-rpc-form.component.html
@@ -19,7 +19,7 @@
           mz-button
           (click)="bottomSheetModal.openModal()"
           [disabled]="!rpcCommand"
-          class="waves-effect waves-light btn right"
+          class="waves-effect waves-light btn right blue lighten-2"
         >
           Run command
         </button>
