--- a/src/app/settings/config-edit/config-edit.component.html
+++ b/src/app/settings/config-edit/config-edit.component.html
@@ -21,7 +21,7 @@
           mz-button
           (click)="bottomSheetModal.openModal()"
           [disabled]="originalConfig === configForm.value.config"
-          class="waves-effect waves-light btn right"
+          class="waves-effect waves-light btn right blue lighten-2"
         >
           Save Config
         </button>
@@ -30,7 +30,7 @@
           mz-button
           (click)="resetConfig()"
           [disabled]="originalConfig === configForm.value.config"
-          class="waves-effect waves-light btn right"
+          class="waves-effect waves-light btn right blue lighten-2"
         >
           Reset Changes
         </button>
