--- a/src/app/settings/config-edit/config-edit.component.html
+++ b/src/app/settings/config-edit/config-edit.component.html
@@ -28,6 +28,7 @@
 
         <button
           mz-button
+          id="reset-changes"
           (click)="resetConfig()"
           [disabled]="originalConfig === configForm.value.config"
           class="waves-effect waves-light btn right blue lighten-2"
