--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,8 +1,12 @@
 <div class="overview-grid">
+  <app-device-utils class="overview-card-container"></app-device-utils>
   <app-ui-password class="overview-card-container"></app-ui-password>
   <app-set-main-address class="overview-card-container"></app-set-main-address>
-  <app-generic-rpc-form class="overview-card-container"></app-generic-rpc-form>
-  <app-config-edit class="overview-card-container"></app-config-edit>
-  <app-device-utils class="overview-card-container"></app-device-utils>
   <app-wallet-utils class="overview-card-container"></app-wallet-utils>
+  <app-generic-rpc-form class="overview-card-container"></app-generic-rpc-form>
+  <app-change-wallet-password
+    class="overview-card-container"
+  ></app-change-wallet-password>
+  <app-config-edit class="overview-card-container"></app-config-edit>
+  <app-change-rpc-auth class="overview-card-container"></app-change-rpc-auth>
 </div>
