--- a/src/app/settings/ui-password/ui-password.component.html
+++ b/src/app/settings/ui-password/ui-password.component.html
@@ -28,7 +28,7 @@
         <button
           mz-button
           (click)="bottomSheetModal.openModal()"
-          class="waves-effect waves-light btn right"
+          class="waves-effect waves-light btn right blue lighten-2"
           [disabled]="!uiPassword.password || !uiPassword.username"
         >
           Update
