--- a/src/app/settings/wallet-utils/wallet-utils.component.html
+++ b/src/app/settings/wallet-utils/wallet-utils.component.html
@@ -45,7 +45,7 @@
     <form [formGroup]="">
       <label>
         Web interface Password:
-        <input type="text" required />
+        <input type="password" required />
       </label>
 
       <label>
@@ -101,7 +101,7 @@
     <form [formGroup]="">
       <label>
         Web interface Password:
-        <input type="text" required />
+        <input type="password" required />
       </label>
 
       <button mz-button mz-modal-close type="submit">
