--- a/src/app/settings/device-utils/device-utils.component.html
+++ b/src/app/settings/device-utils/device-utils.component.html
@@ -55,7 +55,7 @@
     <form [formGroup]="">
       <label>
         Web interface Password:
-        <input type="text" required />
+        <input type="password" required />
       </label>
 
       <button mz-button mz-modal-close type="submit">
