--- a/src/app/homepage/wallet-status/wallet-status.component.html
+++ b/src/app/homepage/wallet-status/wallet-status.component.html
@@ -56,19 +56,6 @@
 
     <div
       class="row"
-      *ngIf="wallet.isLocked && wallet.isEncrypted"
-      (click)="unlockModal.openModal()"
-    >
-      <button
-        [disabled]="buttonDebounce"
-        class="waves-effect waves-light btn left blue lighten-2"
-      >
-        Unlock Wallet
-      </button>
-    </div>
-
-    <div
-      class="row"
       *ngIf="!wallet.isStaking"
       (click)="
         !wallet.isUnlockedForStaking
@@ -148,47 +135,6 @@
   </mz-modal-footer>
 </mz-modal>
 
-<mz-modal #unlockModal>
-  <mz-modal-header>
-    <h4>Unlock Your Wallet</h4>
-  </mz-modal-header>
-  <mz-modal-content>
-    <p>
-      You are about unlock your wallet. Be aware that this means your wallet
-      will be able to send payments and sign messages without the use of the
-      wallets encryption password.
-    </p>
-    <p>
-      We recommend only unlocking your wallet for the shortest amount of time
-      required. Use the 'Lock Wallet' button that will display after your wallet
-      is unlocked to lock it when you are finished.
-    </p>
-
-    <form [formGroup]="unlockForm" (ngSubmit)="setLocked(false)">
-      <label>
-        Wallet Password:
-        <input type="password" formControlName="unlockPassword" required />
-      </label>
-
-      <label>
-        Unlock time (in seconds):
-        <input type="number" formControlName="unlockTime" required />
-      </label>
-      <button
-        mz-button
-        mz-modal-close
-        type="submit"
-        [disabled]="!unlockForm.valid || buttonDebounce"
-      >
-        Unlock Wallet
-      </button>
-    </form>
-  </mz-modal-content>
-  <mz-modal-footer>
-    <button mz-button [flat]="true" mz-modal-close>Cancel</button>
-  </mz-modal-footer>
-</mz-modal>
-
 <mz-modal #stakingModal>
   <mz-modal-header>
     <h4>Begin Staking</h4>
@@ -202,7 +148,7 @@
     <form [formGroup]="stakingForm" (ngSubmit)="setStaking(true)">
       <label>
         Wallet Password:
-        <input type="text" formControlName="stakingPassword" required />
+        <input type="password" formControlName="stakingPassword" required />
       </label>
 
       <button
