Encrypt wallet now respects debounce. Added toast for error and beginning of encryption. swapped success to toast.

--- a/src/app/homepage/wallet-status/wallet-status.component.html
+++ b/src/app/homepage/wallet-status/wallet-status.component.html
@@ -72,6 +72,7 @@
       <button
         class="waves-effect waves-light btn left blue lighten-2"
         (click)="encryptionModal.openModal()"
+        [disabled]="buttonDebounce"
       >
         Encrypt Wallet
       </button>
