Updated wording to be less alarming. Removed config display from confrim dialog due to its visual size

--- a/src/app/settings/config-edit/config-edit.component.html
+++ b/src/app/settings/config-edit/config-edit.component.html
@@ -46,14 +46,11 @@
   </mz-modal-header>
   <mz-modal-content>
     <p>
-      You are about to update your NavCoin&nbsp;StakeBox's wallet config. Beware
-      of scammers who ask you to run commands on your stakebox!
+      You are about to update your NavCoin&nbsp;StakeBox's wallet config.
     </p>
     <p>
-      Make sure you are aware of what the settings in your config are before you
-      save them.
+      Make sure your settings in your config are correct before you save them.
     </p>
-    <div class="codeblock">{{ configForm.value.config }}</div>
   </mz-modal-content>
   <mz-modal-footer>
     <button mz-button [flat]="true" mz-modal-close>Cancel</button>
