Changed 'dismiss notifications' to 'dismiss'

--- a/src/app/notification-bar/notification-bar.component.html
+++ b/src/app/notification-bar/notification-bar.component.html
@@ -20,7 +20,7 @@
       (click)="removeNotification(notif)"
       class="waves-effect waves-light btn light grey right"
     >
-      Dismiss notification
+      Dismiss
     </button>
   </div>
 </div>
