Slightly better colour

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -44,7 +44,7 @@
         >
       </mz-dropdown>
 
-      <a mz-button id="btn-dropdown" href="#" class="grey lighten-2">Menu</a>
+      <a mz-button id="btn-dropdown" href="#" class="purple darken-1">Menu</a>
     </mz-navbar-item>
   </mz-navbar-item-container>
 </mz-navbar>
