--- a/src/app/settings/device-utils/device-utils.component.html
+++ b/src/app/settings/device-utils/device-utils.component.html
@@ -4,19 +4,21 @@
   </mz-card-title>
 
   <mz-card-content>
-    <div class="row" (click)="restartModal.openModal()">
+    <div class="row">
       <button
         [disabled]=""
         class="waves-effect waves-light btn left blue lighten-2"
+        (click)="restartModal.openModal()"
       >
         Restart Stakebox
       </button>
     </div>
 
-    <div class="row" (click)="updateModal.openModal()">
+    <div class="row">
       <button
         [disabled]=""
         class="waves-effect waves-light btn left blue lighten-2"
+        (click)="updateModal.openModal()"
       >
         Update Stakebox UI
       </button>
