We no longer add duplicate notifs. we no longer show notifications if you are logged out

--- a/src/app/notification-bar/notification-bar.component.html
+++ b/src/app/notification-bar/notification-bar.component.html
@@ -1,4 +1,4 @@
-<div id="notification-bar">
+<div id="notification-bar" *ngIf="authed">
   <div
     *ngFor="let notif of notificationService.getNotifications()"
     [ngClass]="{
