Changed links to open in new tab

--- a/src/app/community-fund/payment-request-list/payment-request-list.component.html
+++ b/src/app/community-fund/payment-request-list/payment-request-list.component.html
@@ -104,6 +104,7 @@
                 'https://www.navexplorer.com/community-fund/paymentRequest/' +
                 paymentRequest.hash
               "
+              target="_blank"
               class="button"
               >View Payment Request</a
             >
