--- a/src/app/homepage/homepage-payment-request-list/homepage-payment-request-list.html
+++ b/src/app/homepage/homepage-payment-request-list/homepage-payment-request-list.html
@@ -80,6 +80,7 @@
               'https://www.navexplorer.com/community-fund/payment-request/' +
               paymentRequest.hash
             "
+            target="_blank"
             class="button"
             >View Proposal</a
           >
