--- a/src/app/community-fund/proposal-list/proposal-list.component.html
+++ b/src/app/community-fund/proposal-list/proposal-list.component.html
@@ -99,6 +99,7 @@
                 'https://www.navexplorer.com/community-fund/proposal/' +
                 proposal.hash
               "
+              target="_blank"
               class="button"
               >View Proposal</a
             >
