--- a/src/app/homepage/homepage-proposal-list/homepage-proposal-list.component.html
+++ b/src/app/homepage/homepage-proposal-list/homepage-proposal-list.component.html
@@ -75,6 +75,7 @@
               'https://www.navexplorer.com/community-fund/proposal/' +
               proposal.hash
             "
+            target="_blank"
             class="button"
             >View Proposal</a
           >
