Fixed encryption detection logic. Improved responsiveness of notifications and navbar

--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,6 +3,11 @@
 }
 
 @media (max-width: 690px) {
+  .site-logo {
+    font-size: 1.5rem;
+    margin-left: 0.8rem;
+  }
+
   .mobile-menu {
     display: initial;
   }
