--- a/src/app/notification-bar/notification-bar.component.css
+++ b/src/app/notification-bar/notification-bar.component.css
@@ -1,4 +1,16 @@
+.container {
+  display: grid;
+  grid-template-columns: repeat(6, 175px);
+  grid-gap: 20px;
+  justify-content: center;
+  max-width: 90vw;
+  min-width: 300px;
+  width: 100%;
+  margin: 0 auto;
+}
+
 #notification-bar {
+  grid-column: 1 / -1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,14 +18,53 @@
 }
 
 .notification {
+  width: 100%;
   padding: 15px;
   margin: 10px 0;
-  width: 90vw;
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
     0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+button {
+  flex: 0 0 150px;
+  margin: 0 0 0 10px;
+}
+
+.text {
+  flex: 1 1;
+}
+
+@media (max-width: 500px) {
+  .notification {
+    flex-direction: column;
+  }
+
+  button {
+    flex: 0 0 50px;
+    margin: 10px 20px 0 20px;
+    max-height: 50px;
+  }
+}
+
+@media (max-width: 1240px) {
+  .container {
+    grid-template-columns: repeat(4, minmax(175px, 1fr));
+  }
+}
+
+@media (max-width: 840px) {
+  .container {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media (max-width: 680px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
 }
 
 .info {
