--- a/src/app/community-fund/payment-request-creator/payment-request-creator.component.html
+++ b/src/app/community-fund/payment-request-creator/payment-request-creator.component.html
@@ -16,7 +16,7 @@
 
       <label>
         Payment Request Amount:
-        <input type="text" formControlName="requestedAmount" required />
+        <input type="number" formControlName="requestedAmount" required />
       </label>
 
       <button
@@ -38,7 +38,10 @@
     <p>
       You are about to create the following payment request.
     </p>
-
+    <p *ngIf="isEncrypted">
+      Since your wallet is encrypted you will need to enter your wallet
+      password.
+    </p>
     <form (ngSubmit)="onSubmit()">
       <p>Proposal Hash: {{ paymentReqForm.value.proposalHash }}</p>
       <p>Payment Request Description: {{ paymentReqForm.value.uniqueID }}</p>
@@ -46,7 +49,16 @@
         Payment Request Requested Amount:
         {{ paymentReqForm.value.requestedAmount }} NAV
       </p>
-      <button mz-button mz-modal-close type="submit">
+      <div class="input-field ">
+        <input type="password" name="password" [(ngModel)]="walletPassword" />
+      </div>
+
+      <button
+        mz-button
+        mz-modal-close
+        [disabled]="isEncrypted && !walletPassword"
+        type="submit"
+      >
         Create Payment Request
       </button>
     </form>
