--- a/src/app/homepage/homepage-proposal-list/homepage-proposal-list.component.css
+++ b/src/app/homepage/homepage-proposal-list/homepage-proposal-list.component.css
@@ -1,22 +1,19 @@
 .overview-card {
   height: 100%;
 }
+
+hr {
+  width: 100%;
+}
 .proposal-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-  grid-gap: 12px;
-  justify-content: space-between;
+  line-height: 30px;
+  padding: 15px 30px;
+  margin: 10px 0;
 }
 .proposal-info {
   line-height: 30px;
-  color: white;
-  background: #7d59b5;
-  border-radius: 10px;
   padding: 15px 30px;
   margin: 10px 0;
-
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14),
-    0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
 
   display: flex;
   flex-direction: column;
@@ -24,12 +21,10 @@
 }
 
 h1 {
-  color: #fcfcfc;
   font-size: 1.4em;
   margin: 0;
 }
 h2 {
-  color: #fcfcfc;
   font-size: 1.2em;
   margin: 5px 0 0 0;
 }
@@ -86,6 +81,11 @@ a.button {
   flex-wrap: wrap;
 }
 
+.hash,
+.description-text {
+  word-break: break-all;
+}
+
 button.selected {
   cursor: pointer;
 }
@@ -101,6 +101,11 @@ button.yes-btn:hover {
 button.no-btn.selected,
 button.no-btn:hover {
   background: lightcoral;
+}
+
+button.yes-btn.selected:hover,
+button.no-btn.selected:hover {
+  background: #f0f0f0;
 }
 
 .see-all-container {
