--- a/src/app/homepage/homepage-proposal-list/homepage-proposal-list.component.html
+++ b/src/app/homepage/homepage-proposal-list/homepage-proposal-list.component.html
@@ -17,6 +17,12 @@
       "
       class="proposal-container"
     >
+      <hr
+        *ngIf="
+          communityFundService.getFilteredProposalList('pending').slice(0, 6)
+            .length < 1
+        "
+      />
       <div
         *ngIf="
           communityFundService.getFilteredProposalList('pending').slice(0, 6)
@@ -38,10 +44,10 @@
       >
         <div>
           <div class="description-text">
-            <div>
+            <h1>
               {{ proposal.description.slice(0, 55)
               }}<span *ngIf="proposal.description.length > 55">...</span>
-            </div>
+            </h1>
           </div>
           <div>Amount: {{ proposal.requestedAmount }} NAV</div>
         </div>
@@ -80,6 +86,7 @@
             >View Proposal</a
           >
         </div>
+        <hr />
       </div>
     </div>
     <div class="see-all-container">
