Added max height to config edit text field

--- a/src/app/settings/config-edit/config-edit.component.css
+++ b/src/app/settings/config-edit/config-edit.component.css
@@ -6,11 +6,14 @@ label {
   width: 100%;
 }
 
-textarea {
+.result {
+  max-height: 350px;
+  overflow-y: scroll;
   min-height: 200px;
   padding: 5px;
   max-width: 294px;
-  min-width: 100%;
+  width: 100%;
+  resize: none;
 }
 
 #reset-changes {
