--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -2,6 +2,10 @@
   display: none;
 }
 
+.dropdown-link {
+  color: #7d59b5;
+}
+
 @media (max-width: 690px) {
   .site-logo {
     font-size: 1.5rem;
