--- a/src/app/community-fund/proposal-list/proposal-list.component.html
+++ b/src/app/community-fund/proposal-list/proposal-list.component.html
@@ -31,7 +31,7 @@
         class="proposal-info"
       >
         <div class="description-text">
-          <h1>{{ proposal.description }}</h1>
+          <h1 [innerHTML]="proposal.description | linkify"></h1>
         </div>
         <div>
           <span
