Added filters to community fund

--- a/src/app/community-fund/payment-request-list/payment-request-list.component.css
+++ b/src/app/community-fund/payment-request-list/payment-request-list.component.css
@@ -127,3 +127,12 @@ button.no-btn.selected:hover {
   color: white;
   background: crimson;
 }
+
+.radio-form {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.radio-button-container {
+  margin: 5px;
+}
