--- a/src/app/community-fund/payment-request-list/payment-request-list.component.html
+++ b/src/app/community-fund/payment-request-list/payment-request-list.component.html
@@ -17,16 +17,76 @@
         communityFundService.paymentRequestVotes
       "
     >
+      <form action="" class="radio-form" (change)="updateFilter()">
+        <mz-radio-button-container class="radio-button-container">
+          <input
+            mz-radio-button
+            [(ngModel)]="payReqfilterValue"
+            name="payReqFilterRadio"
+            [withGap]="true"
+            [label]="'All'"
+            id="PR-ALL"
+            value="ALL"
+            type="radio"
+          />
+        </mz-radio-button-container>
+
+        <mz-radio-button-container class="radio-button-container">
+          <input
+            mz-radio-button
+            [(ngModel)]="payReqfilterValue"
+            name="payReqFilterRadio"
+            [withGap]="true"
+            [label]="'Pending'"
+            id="PR-PENDING"
+            value="PENDING"
+            type="radio"
+          />
+        </mz-radio-button-container>
+
+        <mz-radio-button-container class="radio-button-container">
+          <input
+            mz-radio-button
+            [(ngModel)]="payReqfilterValue"
+            name="payReqFilterRadio"
+            [withGap]="true"
+            [label]="'Accepted'"
+            id="PR-ACCEPTED"
+            value="ACCEPTED"
+            type="radio"
+          />
+        </mz-radio-button-container>
+        <mz-radio-button-container class="radio-button-container">
+          <input
+            mz-radio-button
+            [(ngModel)]="payReqfilterValue"
+            name="payReqFilterRadio"
+            [withGap]="true"
+            [label]="'Rejected/Expired'"
+            id="PR-FAILED"
+            value="FAILED"
+            type="radio"
+          />
+        </mz-radio-button-container>
+      </form>
       <div
-        *ngIf="communityFundService.paymentRequestList.length < 1"
+        *ngIf="
+          communityFundService.getFilteredPaymentRequestList(filterBy).length <
+          1
+        "
         class="proposal-info"
       >
         <div class="description-text">
-          No Payment Requests
+          No Payment Requests match current filter
         </div>
       </div>
+
       <div
-        *ngFor="let paymentRequest of communityFundService.paymentRequestList"
+        *ngFor="
+          let paymentRequest of communityFundService.getFilteredPaymentRequestList(
+            filterBy
+          )
+        "
         class="payment-request-info"
       >
         <div>
