SHortened button text and removed valdation that would break on cold staking addreses

--- a/src/app/settings/set-main-address/set-main-address.component.html
+++ b/src/app/settings/set-main-address/set-main-address.component.html
@@ -22,9 +22,9 @@
         <button
           class="waves-effect waves-light btn right blue lighten-2"
           type="submit"
-          [disabled]="newAddress.length !== 34 || buttonDebounce"
+          [disabled]="buttonDebounce"
         >
-          UPDATE TO: {{ newAddress }}
+          UPDATE ADDRESS
         </button>
       </div>
     </form>
