Updated components to deal with more cf states

--- a/src/app/community-fund/payment-request-list/payment-request-list.component.html
+++ b/src/app/community-fund/payment-request-list/payment-request-list.component.html
@@ -101,7 +101,7 @@
                 accepted:
                   paymentRequest.status === 'accepted' ||
                   paymentRequest.status ===
-                    'accepted waiting for enough coins in fund',
+                    'accepted waiting for end of voting period',
                 rejected: paymentRequest.status === 'rejected',
                 expired:
                   paymentRequest.status === 'expired' ||
